Fixed image sizing on safari

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -80,6 +80,7 @@ article {
 
 article img {
     object-fit: cover;
+    height: 10%;
 }
 
 .btn-dark {
